--- a/WeatherApp/presentation/src/main/res/values/colors.xml
+++ b/WeatherApp/presentation/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#FFC107</color>
-    <color name="primary_dark">#FFA000</color>
+    <color name="primary">#fb07ff</color>
+    <color name="primary_dark">#fb00ff</color>
     <color name="accent">#00BCD4</color>
     <color name="primary_text">#212121</color>
     <color name="divider">#BDBDBD</color>
