--- a/WeatherApp/presentation/src/main/res/layout/city_list_row.xml
+++ b/WeatherApp/presentation/src/main/res/layout/city_list_row.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/ripple_effect"
     android:clickable="true"
-    >
+    android:focusable="true">
 
     <TextView
         android:id="@+id/title"
@@ -16,13 +15,18 @@
         android:padding="@dimen/default_padding"
         android:textColor="@color/primary_text"
         android:textSize="@dimen/text_size_medium"
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="London"
         />
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="@color/divider"
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title"
         />
 </android.support.constraint.ConstraintLayout>
