--- a/WeatherApp/presentation/src/main/res/layout/weather_fragment.xml
+++ b/WeatherApp/presentation/src/main/res/layout/weather_fragment.xml
@@ -48,7 +48,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_weather_description"
             tools:layout_editor_absoluteX="112dp"
-
+            tools:src="@drawable/weather_sunny"
             />
 
         <TextView
